--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,8 @@ jcom_dflt:
     + Cuándo empiezo a contar el tiempo, antes de leer la imagen o antes de comprimirla??
     + Indicar en algún sitio que las componentes se codifican en binario??
     + TRADUCIR COMENTARIOS INICIALES
+
+encode_custom: HE TENIDO QUE HACERLO DESDE 0
+
+jcom_custom:
+    + Sustituir comentarios iniciales
