--- a/TODO.txt
+++ b/TODO.txt
@@ -13,11 +13,13 @@ DecodeScans_custom:
 
 jdes_custom & jdes_dflt:
     + al LEER del fichero comprimido, se tiene que leer como double()? o se lee normal??
-    + Alomejor aquí si que hay que distinguir entre lo que leemos normal y el double
+    + Alomejor aquí si que hay que distinguir entre lo que leemos normal y el double REVISAR CÁLCULOS DEL HEADER
+    + Revisar el cálculo de MSE
+    + Revisar lo que se muestra
+    + Cambiar LEN_ por len_
 
 Cambiar variable fid del fichero por fich o algo así
 Reordenar m,n,mamp,namp al leer y al escribir
-Cambiar CodedY por coded_Y, etc.
 
 
 Obs: lab = Label
