--- a/TODO.txt
+++ b/TODO.txt
@@ -34,3 +34,5 @@ Comparar compression time for when real-time performance is a crucial requiremen
 Bitrate: Calculate the bitrate for each algorithm, which is the average number of bits required to encode each pixel of the compressed image. Lower bitrates indicate more efficient compression. Compare the bitrates obtained by both algorithms to evaluate their efficiency.
 
 Citar algún artículo con SSIM
+
+SSIM en este caso nos da el mismo resultado para los dos compresores porque el resultado visual (la cantidad de componentes de la transformada DCT que se conservan) está determinado por caliQ, que en cada paso es igual en ambos (solo difiere la CODIFICACIÓN). Por esta razón lo usamos como medida para validar nuestro análisis subjetivo (a partir de un cierto valor lo consideraremos bueno CITAR GUIA SSIM Y LOS VALORES).  
